사이트 관리 화면 개발중 searchList 디렉티브개선중

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/initWizard.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/initWizard.html
@@ -110,7 +110,7 @@ angular.module('cinnamon')
 							<md-button class="md-raised md-primary" ng-click="createBaseData()" ng-disabled="isProcessCreateBaseData">
 								<md-icon>present_to_all</md-icon> 기본 데이터 생성
 							</md-button>
-							<md-progress-circular md-mode="indeterminate" ng-if="isProcessCreateBaseData"></md-progress-circular>
+							<md-progress-circular md-mode="indeterminate" ng-if="isProcessCreateBaseData" class="md-mini"></md-progress-circular>
 						</div>
 					</md-tab>
 					<md-tab label="최초 사용자 생성">
