--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/list.html
@@ -16,7 +16,7 @@
 	
 	<md-card md-whiteframe="3">
 		<cm-search-list
-			resource-url="'/rest/configuration/sites'"
+			resource-url="/rest/configuration/sites"
 			domains="domains"
 			sort-items="{
 				siteId: 'siteId',
