--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/selectList.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/selectList.html
@@ -13,7 +13,7 @@
 	<md-card layout-padding="">
 
 		<cm-search-list
-			resource-url="'/rest/configuration/sites'"
+			resource-url="/rest/configuration/sites"
 			domains="domains"
 			is-paging="false"
 			default-search-params="{name: '이름'}"
