--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/select.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/select.html
@@ -3,7 +3,7 @@
 		
 		<!-- <span class="md-title">사용자 모임 선택</span> -->
 		<cm-search-list
-			resource-url="'/rest/configuration/userGroups'"
+			resource-url="/rest/configuration/userGroups"
 			domains="domains">
 			
 			<cm-search-list-filters>
