--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/view.html
@@ -60,7 +60,7 @@
 		</md-card-header>
 		
 		<cm-search-list
-			resource-url="'/rest/configuration/users'"
+			resource-url="/rest/configuration/users"
 			domains="users"
 			default-search-params="{userGroupId: userGroupId}"
 			sort-items="{
