--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
@@ -14,7 +14,7 @@
 	<md-card md-whiteframe="4">
 		
 		<cm-search-list
-			resource-url="'/rest/configuration/users'"
+			resource-url="/rest/configuration/users"
 			domains="domains"
 			search-info="searchInfo"
 			sort-items="{
