--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
@@ -90,32 +90,43 @@
 	
 	
 	<md-sidenav md-component-id="leftSidenav">
-		<md-toolbar>
+		<md-toolbar class="md-tall">
 			<div class="md-toolbar-tools">
 				<md-button class="md-icon-button" ng-click="closeSidenav()">
 					<md-icon>arrow_back</md-icon>
 				</md-button>
 				<h2>Cinnamon</h2>
 			</div>
+			<div class="md-toolbar-tools md-toolbar-tools-bottom" layout="column" layout-align="start">
+				<span><b>{{me.name}}</b></span>
+				<div layout="row">
+					<span flex="">{{me.email}}</span>
+			<md-menu>
+				<md-button class="md-icon-button" ng-click="$mdOpenMenu($event)">
+					<md-icon>expand_more</md-icon>
+				</md-button>
+				<md-menu-content>
+					<md-menu-item>
+						<md-button ng-href="/" target="_self">
+							<md-icon>account_circle</md-icon> 프로필
+						</md-button>
+					</md-menu-item>
+					<md-menu-item>
+						<md-button ng-href="/settings" target="_self">
+							<md-icon></md-icon> 개인 설정
+						</md-button>
+					</md-menu-item>
+					<md-menu-item>
+						<md-button ng-href="/logout" target="_self">
+							<md-icon>power_settings_new</md-icon> 로그아웃
+						</md-button>
+					</md-menu-item>
+				</md-menu-content>
+			</md-menu>
+				</div>
+			</div>
+			
 		</md-toolbar>
-		
-		<!-- <md-menu>
-			<md-button ng-click="$mdOpenMenu($event)">
-				<md-icon>person</md-icon>
-				{{me.name}}
-			</md-button>
-			<md-menu-content>
-				<md-menu-item>
-					<md-button>프로필</md-button>
-				</md-menu-item>
-				<md-menu-item>
-					<md-button ng-href="/settings" target="_self">개인 설정</md-button>
-				</md-menu-item>
-				<md-menu-item>
-					<md-button ng-href="/logout" target="_self">로그아웃</md-button>
-				</md-menu-item>
-			</md-menu-content>
-		</md-menu> -->
 		
 		<md-content ng-clock="">
 			<md-subheader>{{currentMenus.name}}</md-subheader>
