--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/groups/parentList.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/groups/parentList.html
@@ -13,7 +13,7 @@
 	<md-dialog-content>
 	<!-- 상세 검색 시작 -->
 		<cm-search-list
-			resource-url="'/rest/configuration/groups'"
+			resource-url="/rest/configuration/groups"
 			domains="domains"
 			sort-items="{
 				parentGroupId : '부모코드',
