--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menuGroups/select.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menuGroups/select.html
@@ -1,35 +1,27 @@
 <md-dialog flex="70" cm-dialog-template="" toolbar-title="'메뉴 모음 선택'">
 	<cm-dialog-template-content>
 		
-		
 		<cm-search-list
-			resource-url="'/rest/configuration/menuGroups'"
-			domains="domains"
+			resource-url="/rest/configuration/menuGroups"
+			domains="menuGroups"
 			is-paging="false"
-			default-search-params="{name: '이름'}"
+			default-search-params="defaultSearchParams"
 			search-info="searchInfo">
 			
 			<cm-search-list-filters>
 				<md-card-content class="content" layout="column">
-					<md-input-container layout-fill="">
+					<md-input-container>
 						<label>이름</label>
 						<input name="name" />
 					</md-input-container>
 				</md-card-content>
 			</cm-search-list-filters>
-			
 			<cm-search-list-items>
-				<md-list-item ng-repeat="domain in domains.content" layout="row">
-					<div flex="30">
-						{{domain.name}}
-					</div>
-					
-					<md-button class="md-primary md-raised" ng-show="{{domain.menuGroupId != siteInfo.defaultMenuGroup.menuGroupId}}" ng-click="putDefaultMenuGroup(domain.menuGroupId)">
-						기본메뉴설정
-					</md-button>
-					<p ng-show="{{domain.menuGroupId == siteInfo.defaultMenuGroup.menuGroupId}}" style="margin-left:15px;">
-						기본메뉴
-					</p>
+				<md-list-item ng-repeat="menuGroup in menuGroups.content" layout="row" ng-click="onSelect(menuGroup)">
+					<span flex="10" class="text-muted">{{menuGroup.menuGroupId}}</span>
+					<b flex="30">{{menuGroup.name}}</b>
+					<span flex="30" class="text-muted">{{menuGroup.dimension}}</span>
+					<span flex="30" class="text-muted">{{menuGroup.defaultPage}}</span>
 					<md-divider></md-divider>
 				</md-list-item>
 			</cm-search-list-items>
