--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menuGroups/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menuGroups/view.html
@@ -19,7 +19,7 @@
 	</h3>
 	
 	<md-card>
-		<md-card-header>
+		<md-card-header layout-align="none center">
 			<md-card-header-text layout-align="center">
 				<span class="md-title">기본정보</span>
 			</md-card-header-text>
@@ -27,9 +27,22 @@
 				<md-tooltip>기본 정보 수정</md-tooltip>
 				<md-icon>edit</md-icon>
 			</md-button>
+			<md-menu>
+				<md-button class="md-icon-button" ng-click="$mdOpenMenu($event)">
+					<md-icon>more_vert</md-icon>
+				</md-button>
+				<md-menu-content>
+					<md-menu-item>
+						<md-button ng-click="delete($event)">
+							<md-icon>remove_circle</md-icon>
+							삭제
+						</md-button>
+					</md-menu-item>
+				</md-menu-content>
+			</md-menu>
 		</md-card-header>
 		
-		<md-content layout-padding="">
+		<md-card-content>
 			<table class="table table-hover">
 				<tr>
 					<th>menuGroupId</th>
@@ -65,48 +78,67 @@
 					<td class="text-muted">{{domain.description}}</td>
 				</tr>
 			</table>
-		</md-content>
+		</md-card-content>
 		
 	</md-card>
 	
 	<md-card>
-		<md-card-header>
+		<md-card-header layout-align="none center">
 			<md-card-header-text>
 				<span class="md-title">메뉴</span>
 			</md-card-header-text>
+			<md-menu>
+				<md-button class="md-icon-button" ng-click="$mdOpenMenu($event)">
+					<md-icon>more_vert</md-icon>
+				</md-button>
+				<md-menu-content>
+					<md-menu-item>
+						<md-button ng-click="editMenus(true)">
+							<md-icon>edit</md-icon>
+							편집
+						</md-button>
+					</md-menu-item>
+				</md-menu-content>
+			</md-menu>
 		</md-card-header>
 		
+		<md-button class="md-raised md-accent" ng-if="isEditMenus" ng-click="editMenus(false)">편집 취소</md-button>
 		
 		<md-tabs md-dynamic-height="true">
 			<md-tab label="사이드바">
 				<cm-search-list
-					resource-url="'/rest/configuration/menus'"
+					resource-url="/rest/configuration/menus"
 					domains="sidebarMenus"
 					is-paging="false"
 					default-search-params="{menuGroupId: menuGroupId, position: 'sidebar'}">
 					
 					<cm-search-list-filters>
 						<md-card-content class="content" layout="column">
-							<md-input-container layout-fill="">
+							<md-input-container>
 								<label>menuId</label>
 								<input name="menuId" />
 							</md-input-container>
-							<md-input-container layout-fill="">
+							<md-input-container>
 								<label>이름</label>
 								<input name="name" />
 							</md-input-container>
-							<md-input-container layout-fill="">
+							<md-input-container>
 								<label>경로</label>
 								<input name="uri" />
 							</md-input-container>
 						</md-card-content>
 					</cm-search-list-filters>
 					<cm-search-list-items>
-					<md-list-item ng-repeat="domain in sidebarMenus.content" ng-click="goMenuView(domain)" layout="row">
-						<span flex="10" class="text-muted">{{domain.menuId}}</span>
-						<b flex="30">{{domain.name}}</b>
-						<span flex="30" class="text-muted">{{domain.uri}}</span>
-						<span flex="30" class="text-muted">{{domain.type}}</span>
+					<md-list-item ng-repeat="menu in sidebarMenus.content" ng-click="goMenuView(menu)" layout="row">
+						<md-button class="md-icon-button md-warn" ng-if="isEditMenus" ng-click="deleteMenu(menu)">
+							<md-tooltip md-direction="top">메뉴 삭제</md-tooltip>
+							<md-icon>remove_circle</md-icon>
+						</md-button>
+						<span flex="10" class="text-muted">{{menu.menuId}}</span>
+						<b flex="30">
+							<md-icon>{{menu.iconClass}}</md-icon>{{menu.name}}</b>
+						<span flex="30" class="text-muted">{{menu.uri}}</span>
+						<span flex="30" class="text-muted" hide-xs="">{{menu.type}}</span>
 						<md-divider ng-if="!$last"></md-divider>
 					</md-list-item>
 					</cm-search-list-items>
@@ -114,33 +146,38 @@
 			</md-tab>
 			<md-tab label="해더 왼쪽">
 				<cm-search-list
-					resource-url="'/rest/configuration/menus'"
+					resource-url="/rest/configuration/menus"
 					domains="headerLeftMenus"
 					is-paging="false"
 					default-search-params="{menuGroupId: menuGroupId, position: 'headerLeft'}">
 					
 					<cm-search-list-filters>
 						<md-card-content class="content" layout="column">
-							<md-input-container layout-fill="">
+							<md-input-container>
 								<label>menuId</label>
 								<input name="menuId" />
 							</md-input-container>
-							<md-input-container layout-fill="">
+							<md-input-container>
 								<label>이름</label>
 								<input name="name" />
 							</md-input-container>
-							<md-input-container layout-fill="">
+							<md-input-container>
 								<label>경로</label>
 								<input name="uri" />
 							</md-input-container>
 						</md-card-content>
 					</cm-search-list-filters>
 					<cm-search-list-items>
-					<md-list-item ng-repeat="domain in headerLeftMenus.content" ng-click="goMenuView(domain)" layout="row">
-						<span flex="10" class="text-muted">{{domain.menuId}}</span>
-						<b flex="30">{{domain.name}}</b>
-						<span flex="30" class="text-muted">{{domain.uri}}</span>
-						<span flex="30" class="text-muted">{{domain.type}}</span>
+					<md-list-item ng-repeat="menu in headerLeftMenus.content" ng-click="goMenuView(menu)" layout="row">
+						<md-button class="md-icon-button md-warn" ng-if="isEditMenus" ng-click="deleteMenu(menu)">
+							<md-tooltip md-direction="top">메뉴 삭제</md-tooltip>
+							<md-icon>remove_circle</md-icon>
+						</md-button>
+						<span flex="10" class="text-muted">{{menu.menuId}}</span>
+						<b flex="30">
+							<md-icon>{{menu.iconClass}}</md-icon>{{domain.name}}</b>
+						<span flex="30" class="text-muted">{{menu.uri}}</span>
+						<span flex="30" class="text-muted" hide-xs="">{{menu.type}}</span>
 						<md-divider ng-if="!$last"></md-divider>
 					</md-list-item>
 					</cm-search-list-items>
@@ -148,33 +185,38 @@
 			</md-tab>
 			<md-tab label="해더 오른쪽">
 				<cm-search-list
-					resource-url="'/rest/configuration/menus'"
+					resource-url="/rest/configuration/menus"
 					domains="headerRightMenus"
 					is-paging="false"
 					default-search-params="{menuGroupId: menuGroupId, position: 'headerRight'}">
 					
 					<cm-search-list-filters>
 						<md-card-content class="content" layout="column">
-							<md-input-container layout-fill="">
+							<md-input-container>
 								<label>menuId</label>
 								<input name="menuId" />
 							</md-input-container>
-							<md-input-container layout-fill="">
+							<md-input-container>
 								<label>이름</label>
 								<input name="name" />
 							</md-input-container>
-							<md-input-container layout-fill="">
+							<md-input-container>
 								<label>경로</label>
 								<input name="uri" />
 							</md-input-container>
 						</md-card-content>
 					</cm-search-list-filters>
 					<cm-search-list-items>
-					<md-list-item ng-repeat="domain in headerRightMenus.content" ng-click="goMenuView(domain)" layout="row">
-						<span flex="10" class="text-muted">{{domain.menuId}}</span>
-						<b flex="30">{{domain.name}}</b>
-						<span flex="30" class="text-muted">{{domain.uri}}</span>
-						<span flex="30" class="text-muted">{{domain.type}}</span>
+					<md-list-item ng-repeat="menu in headerRightMenus.content" ng-click="goMenuView(menu)" layout="row">
+						<md-button class="md-icon-button md-warn" ng-if="isEditMenus" ng-click="deleteMenu(menu)">
+							<md-tooltip md-direction="top">메뉴 삭제</md-tooltip>
+							<md-icon>remove_circle</md-icon>
+						</md-button>
+						<span flex="10" class="text-muted">{{menu.menuId}}</span>
+						<b flex="30">
+							<md-icon>{{menu.iconClass}}</md-icon> {{menu.name}}</b>
+						<span flex="30" class="text-muted">{{menu.uri}}</span>
+						<span flex="30" class="text-muted" hide-xs="">{{menu.type}}</span>
 						<md-divider ng-if="!$last"></md-divider>
 					</md-list-item>
 					</cm-search-list-items>
