--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/view.html
@@ -33,7 +33,7 @@
 				</md-button>
 				<md-menu-content>
 					<md-menu-item>
-						<md-button>
+						<md-button ng-click="delete($event)">
 							<md-icon>remove_circle</md-icon>
 							삭제
 						</md-button>
@@ -42,7 +42,7 @@
 			</md-menu>
 		</md-card-header>
 		
-		<md-content layout-padding="">
+		<md-card-content>
 			<table class="table table-hover">
 				<tr>
 					<th>siteId</th>
@@ -50,7 +50,7 @@
 				</tr>
 				<tr>
 					<th>이름</th>
-					<td>{{domain.name}}</td>
+					<td><b>{{domain.name}}</b></td>
 				</tr>
 				<tr>
 					<th>URL</th>
@@ -59,7 +59,7 @@
 				<tr>
 					<th>기본 메뉴 모음</th>
 					<td class="text-muted">
-						{{domain.defaultMenuGroup.name}}
+						<a ng-href="/configuration/menuGroups/{{domain.defaultMenuGroup.menuGroupId}}" target="_self">{{domain.defaultMenuGroup.name}}</a>
 						<md-button class="md-raised md-primary" ng-click="popupDefaultSite($event)">메뉴 모음 선택</md-button>
 					</td>
 				</tr>
@@ -77,7 +77,7 @@
 					</td>
 				</tr>
 			</table>
-		</md-content>
+		</md-card-content>
 		
 	</md-card>
 	
@@ -89,7 +89,7 @@
 		</md-card-header>
 		
 		<cm-search-list
-			resource-url="'/rest/configuration/menuGroups'"
+			resource-url="/rest/configuration/menuGroups"
 			domains="menuGroups"
 			default-search-params="{siteId: siteId}"
 			sort-items="{
@@ -115,13 +115,13 @@
 				</md-card-content>
 			</cm-search-list-filters>
 			<cm-search-list-items>
-			<md-list-item ng-repeat="domain in menuGroups.content" ng-click="goMenuGroupView(domain)" layout="row">
-				<span flex="10" class="text-muted">{{domain.menuGroupId}}</span>
-				<b flex="30">{{domain.name}}</b>
-				<span flex="30" class="text-muted">{{domain.dimension}}</span>
-				<span flex="30" class="text-muted">{{domain.defaultPage}}</span>
-				<md-divider ng-if="!$last"></md-divider>
-			</md-list-item>
+				<md-list-item ng-repeat="menuGroup in menuGroups.content" ng-click="goMenuGroupView(menuGroup)" layout="row">
+					<span flex="10" class="text-muted">{{menuGroup.menuGroupId}}</span>
+					<b flex="30">{{menuGroup.name}}</b>
+					<span flex="30" class="text-muted">{{menuGroup.dimension}}</span>
+					<span flex="30" class="text-muted">{{menuGroup.defaultPage}}</span>
+					<md-divider ng-if="!$last"></md-divider>
+				</md-list-item>
 			</cm-search-list-items>
 		</cm-search-list>
 	</md-card>
