--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/list.html
@@ -13,7 +13,7 @@
 	
 	<md-card md-whiteframe="3">
 		<cm-search-list
-			resource-url="'/rest/configuration/userGroups'"
+			resource-url="/rest/configuration/userGroups"
 			domains="domains"
 			sort-items="{
 				userGroupId: 'userGroupId',
@@ -25,15 +25,15 @@
 			
 			<cm-search-list-filters>
 				<md-card-content class="content" layout="column">
-					<md-input-container layout-fill="">
+					<md-input-container>
 						<label>이름</label>
 						<input />
 					</md-input-container>
-					<md-input-container layout-fill="">
+					<md-input-container>
 						<label>userId</label>
 						<input />
 					</md-input-container>
-					<md-input-container layout-fill="">
+					<md-input-container>
 						<label>이메일</label>
 						<input />
 					</md-input-container>
