--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/select2.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/select2.html
@@ -11,7 +11,7 @@
 	
 	
 	<cm-search-list
-		resource-url="'/rest/configuration/userGroups'"
+		resource-url="/rest/configuration/userGroups"
 		domains="domains">
 		
 		<cm-search-list-filters>
