사용자 리스트 수정

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
@@ -44,7 +44,7 @@
 					<div flex="5">
 						<md-icon>account_circle</md-icon>
 					</div>
-					<b flex="30">{{domain.name}}</b>
+					<b flex="30">{{domain.userId}}</b>
 					<b flex="20">{{domain.name}}</b>
 					<span flex="20" class="text-muted">{{domain.email}}</span>
 					<span class="text-muted">{{domain.tel}}</span>
@@ -52,7 +52,6 @@
 				</md-list-item>
 			</cm-search-list-items>
 		</cm-search-list>
-		
 		
 		
 		<!-- <md-card-header layout="row" layout-align="center center">
