서버 설정 부분 오류사항 수정  - 사용자 정보 상세  - 사용자 그룹 리스트 미노출  - 코드 관리 상세

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/groups/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/groups/view.html
@@ -47,7 +47,7 @@
 							<strong>사용상태</strong>
 						</p>
 						<p class="text-muted">
-							{{domains.useStatus}}
+							{{statusMap[domains.useStatus]}}
 						</p>
 					</md-list-item>
 				</md-list>
