--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
@@ -61,7 +61,7 @@
 				</tr>
 				<tr>
 					<th class="text-muted">국가</th>
-					<td>{{domain.nation}}</td>
+					<td>{{nationMap[domain.nation]}}</td>
 				</tr>
 				<tr>
 					<th class="text-muted">핸드폰</th>
