--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
@@ -13,10 +13,13 @@
 <script type="text/javascript" src="/js/cinnamon.js"></script>
 <script type="text/javascript">
 angular.module('cinnamon')
-.controller('loginController', function($scope) {
+.controller('loginController', function($scope, $interval) {
 	$scope.goJoin = function() {
 		console.log('goJoin');
-		location.href = '/join';
+		
+		$interval(function() {
+			location.href = '/join';
+		}, 150, 1);
 	}
 });
 </script>
@@ -25,13 +28,17 @@ angular.module('cinnamon')
 
 	<md-content flex-gt-xs="30" class="content" ng-controller="loginController">
 		
+		<div layout-align="center center" layout="row">
+			<h2 class="md-headline">welcom to Cinnamon</h2>
+		</div>
+		
 		<form th:action="@{/login}" method="post">
 			<md-card layout-padding="">
-				<md-card-header>
+				<!-- <md-card-header>
 					<md-card-header-text>
 						<span class="md-title">welcom to Cinnamon</span>
 					</md-card-header-text>
-				</md-card-header>
+				</md-card-header> -->
 				
 				<p th:if="${param.error}" class="alert-danger animated fadeIn">
 					아이디나 비밀번호가 일치하지 않습니다.
@@ -50,16 +57,20 @@ angular.module('cinnamon')
 							<input type="password" name="password" required="required" maxlength="30" />
 						</md-input-container>
 						
-						<input type="hidden" name="remember-me" value="{{remomberMe}}" />
-						<md-checkbox ng-model="remomberMe">로그인 상태 유지</md-checkbox>
-						<!-- <input type="hidden" name="remember-me" value="{{rememberMe}}" /> -->
+						<input type="hidden" name="remember-me" value="true" />
+						<!-- <input type="hidden" name="remember-me" value="{{remomberMe}}" />
+						<md-checkbox ng-model="remomberMe">로그인 상태 유지</md-checkbox> -->
 				</md-card-content>
-				<md-card-actions>
-					<md-button type="submit" class="md-raised md-primary">로그인</md-button>
-					<md-button ng-click="goJoin()">회원가입</md-button>
-				</md-card-actions>
+				<!-- <md-card-actions> -->
+				<md-button type="submit" class="md-raised md-primary">로그인</md-button>
+				<!-- </md-card-actions> -->
 			</md-card>
 		</form>
+		
+		<md-card>
+			<md-button ng-click="goJoin()">회원가입 하시겠습니까?</md-button>
+			<md-button ng-click="goFindPassword()">비밀번호를 잃어버리셨습니까?</md-button>
+		</md-card>
 		
 	</md-content>
 </body>
