메뉴 하위 메뉴 등록 및 수정 기능 작업 중.

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
@@ -56,6 +56,7 @@
 			total-items="domains.totalElements"
 			items-per-page="domains.size"
 			boundary-links="true"
+			max-size="20"
 			ng-model="searchInfo.page"
 			ng-change="onPageChange()" />
 		
