--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menus/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menus/view.html
@@ -5,7 +5,7 @@
 		</md-button>
 	</md-fab-trigger>
 	<md-fab-actions>
-		<md-button class="md-fab md-accent md-raised md-mini" ng-click="selectMenuGroup($event)">
+		<md-button class="md-fab md-accent md-raised md-mini" ng-click="openCreateMenu()">
 			<md-tooltip md-direction="left">하위 메뉴 생성</md-tooltip>
 			<md-icon>menu</md-icon>
 		</md-button>
@@ -17,7 +17,7 @@
 		사이트 및 메뉴
 		<span class="md-subhead text-muted">메뉴 정보</span>
 	</h3>
-	
+
 	<md-card>
 		<md-card-header layout-align="none center">
 			<md-card-header-text>
