--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
@@ -13,13 +13,35 @@
 <script type="text/javascript" src="/js/cinnamon.js"></script>
 <script type="text/javascript">
 angular.module('cinnamon')
-.controller('loginController', function($scope, $interval) {
+.controller('loginController', function($scope, $interval, $mdToast) {
 	$scope.goJoin = function() {
-		console.log('goJoin');
-		
 		$interval(function() {
 			location.href = '/join';
 		}, 150, 1);
+	}
+	
+	$scope.goFindPassword = function() {
+		$interval(function() {
+			location.href = '/findPassword';
+		}, 150, 1);
+	}
+	
+	$scope.onSubmit = function(loginForm, $event) {
+		console.log('onSubmit');
+		
+		console.log(loginForm.$valid);
+		
+		if (loginForm.$valid == false) {
+			$mdToast.show(
+				$mdToast.simple()
+					.position('top right')
+					.textContent('아이디와 비밀번호를 입력하시기 바랍니다.'));
+			
+			$event.preventDefault();
+			return false;
+		}
+		
+		return true;
 	}
 });
 </script>
@@ -29,10 +51,12 @@ angular.module('cinnamon')
 	<md-content flex-gt-xs="30" class="content" ng-controller="loginController">
 		
 		<div layout-align="center center" layout="row">
-			<h2 class="md-headline">welcom to Cinnamon</h2>
+			<h2 class="md-headline">
+				<a href="/" target="_self">welcom to Cinnamon</a>
+			</h2>
 		</div>
 		
-		<form th:action="@{/login}" method="post">
+		<form name="loginForm" th:action="@{/login}" method="post" ng-submit="onSubmit(loginForm, $event)" novalidate="novalidate">
 			<md-card layout-padding="">
 				<!-- <md-card-header>
 					<md-card-header-text>
@@ -48,18 +72,18 @@ angular.module('cinnamon')
 				</div>
 				
 				<md-card-content>
-						<md-input-container class="md-block">
-							<label>userId</label>
-							<input name="username" required="required" maxlength="20" />
-						</md-input-container>
-						<md-input-container class="md-block">
-							<label>비밀번호</label>
-							<input type="password" name="password" required="required" maxlength="30" />
-						</md-input-container>
-						
-						<input type="hidden" name="remember-me" value="true" />
-						<!-- <input type="hidden" name="remember-me" value="{{remomberMe}}" />
-						<md-checkbox ng-model="remomberMe">로그인 상태 유지</md-checkbox> -->
+					<md-input-container class="md-block">
+						<label>userId</label>
+						<input name="username" ng-model="domain.username" required="required" maxlength="20" />
+					</md-input-container>
+					<md-input-container class="md-block">
+						<label>비밀번호</label>
+						<input type="password" name="password" ng-model="domain.passowrd" required="required" maxlength="30" />
+					</md-input-container>
+					
+					<input type="hidden" name="remember-me" value="true" />
+					<!-- <input type="hidden" name="remember-me" value="{{remomberMe}}" />
+					<md-checkbox ng-model="remomberMe">로그인 상태 유지</md-checkbox> -->
 				</md-card-content>
 				<!-- <md-card-actions> -->
 				<md-button type="submit" class="md-raised md-primary">로그인</md-button>
