사이트 및 메뉴 기능 개발중: 사이트, 메뉴 모음 관련 관계 설정 관련개발중

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
@@ -45,7 +45,7 @@
 					</md-menu-item>
 					<md-menu-item>
 						<md-button ng-href="/settings" target="_self">
-							<md-icon></md-icon> 개인 설정
+							<md-icon>build</md-icon> 개인 설정
 						</md-button>
 					</md-menu-item>
 					<form name="toolbarLogoutForm" th:action="@{/logout}" method="post">
@@ -70,19 +70,9 @@
 				</md-menu-content>
 			</md-menu>
 			
-			
-			<!-- <md-menu>
-				<md-button class="md-icon-button" ng-click="$mdOpenMenu($event)">
-					<md-icon>more_vert</md-icon>
-				</md-button>
-				<md-menu-content>
-					<md-menu-item>
-						<md-button ng-href="/configuration" target="_self">설정</md-button>
-					</md-menu-item>
-				</md-menu-content>
-			</md-menu> -->
 		</div>
 		
+		<!-- 2depth menus -->
 		<div class="md-primary md-hue-1" layout-fill="" ng-if="childMenus != null">
 			<md-tabs class="md-primary md-hue-1" md-center-tabs="true" md-stretch-tabs="auto" md-selected="selectedChildMenuIndex">
 				<md-tab label="{{menu.name}}" md-on-select="selectChildMenu(menu)" ng-repeat="menu in childMenus" />
@@ -116,14 +106,16 @@
 					</md-menu-item>
 					<md-menu-item>
 						<md-button ng-href="/settings" target="_self">
-							<md-icon></md-icon> 개인 설정
+							<md-icon>build</md-icon> 개인 설정
 						</md-button>
 					</md-menu-item>
-					<md-menu-item>
-						<md-button ng-href="/logout" target="_self">
-							<md-icon>power_settings_new</md-icon> 로그아웃
-						</md-button>
-					</md-menu-item>
+					<form name="sidebarLogoutForm" th:action="@{/logout}" method="post">
+						<md-menu-item>
+							<button md-button="" type="submit">
+								<md-icon>power_settings_new</md-icon> 로그아웃
+							</button>
+						</md-menu-item>
+					</form>
 				</md-menu-content>
 			</md-menu>
 				</div>
