--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/view.html
@@ -84,7 +84,7 @@
 	<md-card>
 		<md-card-header>
 			<md-card-header-text>
-				<span class="md-title">메뉴 모음</span>
+				<span class="md-title">등록된 메뉴 모음</span>
 			</md-card-header-text>
 		</md-card-header>
 		
