--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/menuGroups.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/menuGroups.html
@@ -15,6 +15,7 @@
 
 <script type="text/javascript" src="/js/configuration/menuGroups/viewController.js"></script>
 <script type="text/javascript" src="/js/configuration/menuGroups/createController.js"></script>
+<script type="text/javascript" src="/js/configuration/menuGroups/modifyController.js"></script>
 <script type="text/javascript">
 /*<![CDATA[*/
 angular.module('cinnamon')
@@ -27,6 +28,10 @@ angular.module('cinnamon')
 		url: '/configuration/menuGroups/:menuGroupId',
 		templateUrl: '/configuration/partials/menuGroups/view',
 		controller: 'configuration.menuGroups.view'
+	}).state('modify', {
+		url: '/configuration/menuGroups/:menuGroupId/modify',
+		templateUrl: '/configuration/partials/menuGroups/modify',
+		controller: 'configuration.menuGroups.modify'
 	});
 	
 });
