--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/view.html
@@ -22,7 +22,6 @@
 		<md-card-header>
 			<md-card-header-text>
 				<span class="md-title">기본정보</span>
-				<span class="md-subhead">userGroupId: {{domain.userGroupId}}</span>
 			</md-card-header-text>
 			<md-button class="md-icon-button" ui-sref="modify({userGroupId: domain.userGroupId})">
 				<md-tooltip>기본 정보 수정</md-tooltip>
@@ -32,6 +31,10 @@
 		
 		<md-content layout-padding="">
 			<table class="table table-hover">
+				<tr>
+					<th>userGroupId</th>
+					<td class="text-muted">{{domain.userGroupId}}</td>
+				</tr>
 				<tr>
 					<th>이름</th>
 					<td class="text-muted">{{domain.name}}</td>
