메뉴 수정 기능 추가  angular factory 등록 후 페이지 이동 및 alert 수정

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/menus.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/menus.html
@@ -19,17 +19,17 @@
 /*<![CDATA[*/
 angular.module('cinnamon')
 .config(function($stateProvider, $urlRouterProvider) {
-	$stateProvider.state('view', {
-		url: '/configuration/menus/:menuId',
-		templateUrl: '/configuration/partials/menus/view',
-		controller: 'configuration.menus.view'
-	})
+	$stateProvider
 	.state('modify', {
 		url : '/configuration/menus/:menuId/modify',
 		templateUrl : '/configuration/partials/menus/modify',
 		controller : 'configuration.menus.modify'
-	})
-	;
+	})	
+	.state('view', {
+		url: '/configuration/menus/:menuId',
+		templateUrl: '/configuration/partials/menus/view',
+		controller: 'configuration.menus.view'
+	});
 	
 });
 /*]]>*/
