--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menus/create.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menus/create.html
@@ -47,7 +47,7 @@
 					<label>
 						Type
 					</label>
-					<md-select ng-model="menu.menuType" name="menuType" required="required">
+					<md-select ng-model="menu.type" name="menuType" required="required">
 						<md-option ng-repeat="menuType in menuTypes" value="{{menuType.code}}">
 							{{menuType.code}}
 						</md-option>
