--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menus/modify.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menus/modify.html
@@ -1,17 +1,11 @@
-<md-dialog flex="70">
-	<md-toolbar>
-		<div class="md-toolbar-tools">
-			<h2 class="md-title">메뉴 생성</h2>
-			<span flex=""></span>
-			<md-button class="md-icon-button" ng-click="close()">
-				<md-icon>close</md-icon>
-			</md-button>
-		</div>
-	</md-toolbar>
-	
-	<form name="frm" novalidte="novalidte">
-		<md-card>
-			<md-content layout-padding="">
+	<h3 layout-padding="" class="md-headline">
+		메뉴 정보
+		<span class="md-subhead text-muted">수정</span>
+	</h3>
+
+	<md-card>
+		<form name="frm" novalidte="novalidte">
+			<md-card-content layout-padding="">
 				<md-input-container class="md-block">
 					<label>
 						이름
@@ -47,12 +41,12 @@
 					<label>
 						Type
 					</label>
-					<md-select ng-model="menu.menuType" name="menuType" required="required">
+					<md-select ng-model="menu.type" name="menuType" required="required">
 						<md-option ng-repeat="menuType in menuTypes" value="{{menuType.code}}">
 							{{menuType.code}}
 						</md-option>
 					</md-select>
-					<div ng-messages="frm.menuType.$error ">
+					<div ng-messages="frm.menuType.$error">
 						<div ng-message="required">메뉴 타입을 선택하세요.</div>
 					</div>
 				</md-input-container>
@@ -88,14 +82,11 @@
 					</label>
 					<textarea name="description" ng-model="menu.description" rows="5"></textarea>
 				</md-input-container>
-
-			</md-content>
 			
-			<md-card-actions layout="row">
-				<md-button ng-click="goList()">취소</md-button>
-				<md-button class="md-raised md-primary" type="sumbit" ng-click="create()" ng-disabled="!frm.$valid">생성</md-button>
-			</md-card-actions>
-		</md-card>
-	</form>
-	
-</md-dialog>
+				<md-card-actions layout="row">
+					<md-button ng-click="goBack()">취소</md-button>
+					<md-button class="md-raised md-primary" type="sumbit" ng-click="modify()" ng-disabled="!frm.$valid">수정</md-button>
+				</md-card-actions>
+			</md-card-content>
+		</form>
+	</md-card>	
