search list 디렉티브 개선: 검색 초기화 기능 추가, 검색도메인 없어도 검색 되도록 수정

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
@@ -44,6 +44,9 @@
 		<md-divider></md-divider>
 		<ng-transclude ng-transclude-slot="filters" />
 		<md-button class="md-primary md-raised" ng-click="search()">검색</md-button>
+		<md-button ng-click="initSearch()">
+			<span class="text-muted">검색초기화</span>
+		</md-button>
 		<md-divider></md-divider>
 	</div>
 	<!-- 상세 검색 필드 끝 -->
