--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menus/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menus/view.html
@@ -54,7 +54,7 @@
 				</tr>
 				<tr>
 					<th>아이콘</th>
-					<td><md-icon>{{domain.iconClass}}</md-icon></td>
+					<td><md-icon>{{domain.iconClass}}</md-icon> {{domain.iconClass}}</td>
 				</tr>
 				<tr>
 					<th>위치</th>
