개인 설정->비밀번호 관리 기능 개발중 메뉴 수정 화면 개발중

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
@@ -35,12 +35,12 @@
 			
 			<md-menu ng-show="!isMobile()" ng-clock="">
 				<md-button class="md-icon-button" ng-click="$mdOpenMenu($event)">
-					<md-icon>person</md-icon>
+					<md-icon>account_circle</md-icon>
 				</md-button>
 				<md-menu-content>
 					<md-menu-item>
 						<md-button ng-href="/" target="_self">
-							<md-icon>account_circle</md-icon> 프로필
+							<md-icon>person</md-icon> 프로필
 						</md-button>
 					</md-menu-item>
 					<md-menu-item>
