--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
@@ -50,7 +50,7 @@ angular.module('cinnamon')
 </head>
 <body layout:fragment="body" layout-gt-xs="row" layout-align-gt-xs="center start" class="content">
 
-	<md-content flex-gt-xs="30" class="content" ng-controller="loginController">
+	<md-content flex-xs="100" flex-sm="70" flex-md="50" flex="30" class="content" ng-controller="loginController">
 		
 		<div layout-align="center center" layout="row">
 			<h2 class="md-headline">
