--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menuGroups/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menuGroups/view.html
@@ -78,8 +78,7 @@
 					</td>
 				</tr> -->
 				<tr>
-					<th>설명</th>
-					<td class="text-muted">{{domain.description}}</td>
+					<td colspan="2" class="text-muted">{{domain.description}}</td>
 				</tr>
 			</table>
 		</md-card-content>
