--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/list.html
@@ -14,7 +14,7 @@
 		<span class="md-subhead text-muted">사이트 목록</span>
 	</h3>
 	
-	<md-card md-whiteframe="3">
+	<md-card>
 		<cm-search-list
 			resource-url="/rest/configuration/sites"
 			domains="domains"
