--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/view.html
@@ -70,10 +70,8 @@
 					</td>
 				</tr>
 				<tr>
-					<th>설명</th>
-					<td class="text-muted">
+					<td colspan="2" class="text-muted">
 						{{domain.description}}
-						<!-- <textarea rows="5" ng-bind-html="domain.description" style="width:95%;border:0px;" readonly="true"></textarea> -->
 					</td>
 				</tr>
 			</table>
