--- a/cinnamon-core-web-material/src/main/resources/templates/settings/password.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/settings/password.html
@@ -14,6 +14,23 @@
 /*<![CDATA[*/
 angular.module('cinnamon')
 .config(function($stateProvider, $urlRouterProvider) {
+}).controller('settings.passwordController', function($scope, $http, message) {
+	
+	$scope.change = function(form, $event) {
+		if (form.$valid == false) {
+			message.alert('입력값을 확인하시기 바랍니다.');
+			return;
+		}
+		
+		$scope.isProcess = true;
+		$http.put('/rest/settings/password/change', $scope.domain)
+		.success(function(data) {
+			$scope.domain = {};
+			message.alert('변경되었습니다.');
+		}).finally(function() {
+			$scope.isProcess = false;
+		});
+	}
 });
 /*]]>*/
 </script>
@@ -22,13 +39,13 @@ angular.module('cinnamon')
 </head>
 
 <body layout:fragment="content">
-	<md-content class="content-container content">
+	<md-content class="content-container content" ng-controller="settings.passwordController">
 		<h3 layout-padding="" class="md-headline">
 			개인설정
 			<span class="md-subhead text-muted">비밀번호</span>
 		</h3>
 		
-		<form name="form" ng-submit="create(form, $event)" novalidate="novalidate">
+		<form name="form" novalidate="novalidate" ng-submit="change(form, $event)">
 			<md-card>
 				<md-card-title>
 					<md-card-title-text>
@@ -38,44 +55,34 @@ angular.module('cinnamon')
 				<md-card-content>
 					<md-input-container class="md-block">
 						<label>현재 비밀번호</label>
-						<input name="name" ng-model="domain.name" required="required" md-maxlength="50" maxlength="50" />
-						<div ng-messages="form.name.$error">
+						<input name="currentPassword" ng-model="domain.currentPassword" required="required" md-maxlength="50" maxlength="50" />
+						<div ng-messages="form.currentPassword.$error">
 							<div ng-message="required">필수 입력 항목입니다.</div>
 						</div>
 					</md-input-container>
 					<md-input-container class="md-block">
 						<label>새 비밀번호</label>
-						<input name="name" ng-model="domain.name" required="required" md-maxlength="50" maxlength="50" />
-						<div ng-messages="form.name.$error">
+						<input name="newPassword" ng-model="domain.newPassword" required="required" md-maxlength="50" maxlength="50" />
+						<div ng-messages="form.newPassword.$error">
 							<div ng-message="required">필수 입력 항목입니다.</div>
 						</div>
 					</md-input-container>
 					<md-input-container class="md-block">
 						<label>새 비밀번호 확인</label>
-						<input name="name" ng-model="domain.name" required="required" md-maxlength="50" maxlength="50" />
-						<div ng-messages="form.name.$error">
+						<input name="newPasswordConfirm" ng-model="domain.newPasswordConfirm" required="required" md-maxlength="50" maxlength="50" />
+						<div ng-messages="form.newPasswordConfirm.$error">
 							<div ng-message="required">필수 입력 항목입니다.</div>
 						</div>
 					</md-input-container>
 				</md-card-content>
-				<md-card-actions layout="row">
-					<md-button class="md-raised md-primary" type="sumbit">변경</md-button>
-					<md-button ng-click="">비밀번호를 분실했습니다.</md-button>
+				<md-card-actions layout-align="end" layout="row">
+					<md-progress-circular md-mode="indeterminate" ng-show="isProcess"></md-progress-circular>
+					<md-button class="md-raised md-primary" type="submit" ng-disabled="isProcess">변경</md-button>
+					<!-- <md-button ng-click="">비밀번호를 분실했습니다.</md-button> -->
 				</md-card-actions>
 				
 			</md-card>
 		</form>
-		
-		<!-- <md-card>
-			<md-card-title>
-				<md-card-title-text>
-					<span class="md-title">비밀번호 찾기</span>
-				</md-card-title-text>
-			</md-card-title>
-			<md-card-content>
-				<p class="alert-info" layout-padding="">이메일로 비밀번호를 다시 설정할 수 있는 링크를 보내드립니다.</p>
-			</md-card-content>
-		</md-card> -->
 	</md-content>
 </body>
 </html>
