--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menuGroups/create.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menuGroups/create.html
@@ -27,6 +27,10 @@
 					</div>
 				</md-input-container>
 				<md-input-container class="md-block">
+					<label>라벨</label>
+					<input name="label" ng-model="domain.label" md-maxlength="100" maxlength="100" />
+				</md-input-container>
+				<md-input-container class="md-block">
 					<label>기본 페이지 경로</label>
 					<input name="defaultPage" ng-model="domain.defaultPage" md-maxlength="200" maxlength="200" />
 				</md-input-container>
