--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/selectList.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/selectList.html
@@ -1,18 +1,47 @@
-<md-dialog ng-clock="" flex="70">
-
-	<md-toolbar>
-		<div class="md-toolbar-tools">
-			<h2 class="md-title">사이트 목록</h2>
-			<span flex=""></span>
-			<md-button class="md-icon-button" ng-click="close()">
-				<md-icon>close</md-icon>
-			</md-button>
-		</div>
-	</md-toolbar>
-	
-	<md-card layout-padding="">
-
+<md-dialog flex="70" cm-dialog-template="" toolbar-title="'사이트 선택'">
+	<cm-dialog-template-content>
+		
 		<cm-search-list
+			resource-url="/rest/configuration/sites"
+			domains="domains"
+			sort-items="{
+				siteId: 'siteId',
+				name: '이름'
+			}"
+			search-info="searchInfo"
+			>
+			
+			<cm-search-list-filters>
+				<md-card-content class="content" layout="column">
+					<md-input-container>
+						<label>이름</label>
+						<input />
+					</md-input-container>
+					<md-input-container>
+						<label>userId</label>
+						<input />
+					</md-input-container>
+					<md-input-container>
+						<label>이메일</label>
+						<input />
+					</md-input-container>
+				</md-card-content>
+			</cm-search-list-filters>
+			<cm-search-list-items>
+				<md-list-item ng-repeat="domain in domains.content" ng-click="onSelect(domain)">
+					
+					<div flex="15" class="text-muted">
+						{{domain.siteId}}
+					</div>
+					<b flex="85">{{domain.name}}</b>
+					
+					<md-divider ng-if="!$last"></md-divider>
+				</md-list-item>
+			</cm-search-list-items>
+		</cm-search-list>
+		
+		
+		<!-- <cm-search-list
 			resource-url="/rest/configuration/sites"
 			domains="domains"
 			is-paging="false"
@@ -40,6 +69,7 @@
 				</md-list-item>
 			</cm-search-list-items>
 			
-		</cm-search-list>
-	</md-card>
+		</cm-search-list> -->
+		
+	</cm-dialog-template-content>
 </md-dialog>
