--- a/cinnamon-core-web-material/src/main/resources/templates/settings/account.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/settings/account.html
@@ -79,7 +79,7 @@ angular.module('cinnamon')
 						</md-select>
 					</md-input-container>
 				</md-card-content>
-				<md-card-actions layout="row">
+				<md-card-actions layout-align="end" layout="row">
 					<md-button class="md-raised md-primary" type="sumbit">수정</md-button>
 				</md-card-actions>
 				
